# pivot_dhis_tools

./: LICENSE  README.md  labNotebook-dhis_tools.md  pyproject.toml
src/pivot_dhis_tools/: __init__.py  clear_analytics.py  delete_dataElements.py  dx_code_to_uid.py  get_dataElement_names.py  get_dataElements.py  launch_analytics.py  post_dataElements.py
src/pivot_dhis_tools/pridec/: __init__.py  calc_CSB_alerts.py  calc_orgUnit_alerts.py  fetch_pridec_climate.py  fetch_pridec_disease.py  send_email_pridec.py  update_dataStoreKey.py
tests/: test_dx_code_to_uid.py  test_getDataElement_names.py  test_getDataElements.py  test_launch_analytics.py  test_post_dataElements.py
tests/pridec/: test_calc_CSB_alerts.py  test_calc_orgUnit_alerts.py  test_fetch_pride_disease.py  test_fetch_pridec_climate.py
